--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </a>
         <a href="#" target="_blank">
           <img src="./img/home-page-carpet.jpg" alt="Persian Carpet" />
-          <span>Carpet</span>
+          <span class="Decoration">Decoration</span>
         </a>
       </section>
       <a href="#" class="top"><span>Top</span></a>
