added decoration page

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <img src="./img/Jewellery-home-page.jpg" alt="Persian Jewellery" />
           <span class="Jewellery">Jewellery</span>
         </a>
-        <a href="#" target="_blank">
+        <a href="./Decoration.html" target="_blank">
           <img src="./img/home-page-carpet.jpg" alt="Persian Carpet" />
           <span class="Decoration">Decoration</span>
         </a>
