--- a/Decoration.html
+++ b/Decoration.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Decoration - Iranian Antiques Auction</title>
-    <link rel="stylesheet" href="./Jewellery.css" />
+    <link rel="stylesheet" href="./Decoration.css" />
   </head>
   <body>
     <header>
@@ -29,122 +29,189 @@
       <a href="#sold">Sold out</a>
     </nav>
     <main>
-      <div>
-        <h2></h2>
-        <img src="" alt="" />
+      <div class="firstmain">
+        <div>
+          <h2>Iranian</h2>
+          <h2>Decoration</h2>
+        </div>
+        <img src="./Decoration img/Decoration-main.jpg" alt="Decoration" />
       </div>
-      <div>
+      <div class="startsell">
         <div>
-          <img src="" alt="" />
+          <img src="./Decoration img/Decoration1.jpg" alt="Decoration" />
           <div>
-            <span>name</span>
-            <span>details</span>
-            <span>date</span>
-            <span>place</span>
-            <span>start price</span>
+            <span>Copper Entry</span>
+            <span>Qajar copper entry, all old and original museum pen</span>
+            <span>december 6, 2024</span>
+            <span>Tabriz International Exhibition Center:: East Azerbaijan Province, Tabriz, Tabriz Int. Exhib. Rd, 2CR7+FXM, Iran</span>
+            <span>start price from:€3188.78</span>
           </div>
         </div>
         <div>
-          <img src="" alt="" />
+          <img src="./Decoration img/Decoration2.jpg" alt="Decoration" />
           <div>
-            <span>name</span>
-            <span>details</span>
-            <span>date</span>
-            <span>place</span>
-            <span>start price</span>
+            <span>Vases</span>
+            <span>A pair of three-skin vases</span>
+            <span>October 4,2024</span>
+            <span>Isfahan International Exhibition: Isfahan Province, Isfahan, Isfahan East Ring Expy, JQ4J+79C, Iran</span>
+            <span>start price from:€1509.35</span>
           </div>
         </div>
         <div>
-          <img src="" alt="" />
+          <img src="./Decoration img/Decoration3.jpg" alt="Decoration" />
           <div>
-            <span>name</span>
-            <span>details</span>
-            <span>date</span>
-            <span>place</span>
-            <span>start price</span>
+            <span>Glass Jars</span>
+            <span>Crystal glass sugarcane with antique body</span>
+            <span>October 4,2024</span>
+            <span>Isfahan International Exhibition: Isfahan Province, Isfahan, Isfahan East Ring Expy, JQ4J+79C, Iran</span>
+            <span>start price from:€446.43</span>
           </div>
         </div>
         <div>
-          <img src="" alt="" />
+          <img src="./Decoration img/Decoration4.jpg" alt="Decoration" />
           <div>
-            <span>name</span>
-            <span>details</span>
-            <span>date</span>
-            <span>place</span>
-            <span>start price</span>
+            <span>Wall Plate</span>
+            <span>Immortal antique wall plate</span>
+            <span>October 17,2024</span>
+            <span>Tehran International ExhibitionTehran Province, Tehran, District 3, Iran</span>
+            <span>start price from:€212.59</span>
           </div>
         </div>
         <div>
-          <img src="" alt="" />
+          <img src="./Decoration img/Decoration5.jpg" alt="Decoration" />
           <div>
-            <span>name</span>
-            <span>details</span>
-            <span>date</span>
-            <span>place</span>
-            <span>start price</span>
+            <span>Old Cup</span>
+            <span>Tang and the old cup are completely healthy and hand-made</span>
+            <span>december 6, 2024</span>
+            <span>Tabriz International Exhibition Center:: East Azerbaijan Province, Tabriz, Tabriz Int. Exhib. Rd, 2CR7+FXM, Iran</span>
+            <span>start price from:€531.46</span>
           </div>
         </div>
         <div>
-          <img src="" alt="" />
+          <img src="./Decoration img/Decoration6.jpg" alt="Decoration" />
           <div>
-            <span>name</span>
-            <span>details</span>
-            <span>date</span>
-            <span>place</span>
-            <span>start price</span>
+            <span>Samovar</span>
+            <span>Original and old Russian charcoal samovar</span>
+            <span>October 4,2024</span>
+            <span>Isfahan International Exhibition: Isfahan Province, Isfahan, Isfahan East Ring Expy, JQ4J+79C, Iran</span>
+            <span>start price from:€4251.70</span>
           </div>
         </div>
         <div>
-          <img src="" alt="" />
+          <img src="./Decoration img/Decoration7.jpg" alt="Decoration" />
           <div>
-            <span>name</span>
-            <span>details</span>
-            <span>date</span>
-            <span>place</span>
-            <span>start price</span>
+            <span>Gramophone</span>
+            <span>Old Handley gramophone</span>
+            <span>October 17,2024</span>
+            <span>Tehran International ExhibitionTehran Province, Tehran, District 3, Iran</span>
+            <span>start price from:€318.88</span>
           </div>
         </div>
         <div>
-          <img src="" alt="" />
+          <img src="./Decoration img/Decoration8.jpg" alt="Decoration" />
           <div>
-            <span>name</span>
-            <span>details</span>
-            <span>date</span>
-            <span>place</span>
-            <span>start price</span>
+            <span>Spinning wWheel</span>
+            <span>Very rare old stainless steel wheel</span>
+            <span>december 6, 2024</span>
+            <span>Tabriz International Exhibition Center:: East Azerbaijan Province, Tabriz, Tabriz Int. Exhib. Rd, 2CR7+FXM, Iran</span>
+            <span>start price from:€744.05</span>
           </div>
         </div>
         <div>
-          <img src="" alt="" />
+          <img src="./Decoration img/Decoration9.jpg" alt="Decoration" />
           <div>
-            <span>name</span>
-            <span>details</span>
-            <span>date</span>
-            <span>place</span>
-            <span>start price</span>
+            <span>Crystal Vases</span>
+            <span>A pair of crystal vases with carved grape and wheat ears</span>
+            <span>October 29,2024</span>
+            <span>Shiraz International Exhibition: District 10, Shiraz, Fars Province, Iran</span>
+            <span>start price from:€850.34</span>
           </div>
         </div>
         <div>
-          <img src="" alt="" />
+          <img src="./Decoration img/Decoration10.jpg" alt="Decoration" />
           <div>
-            <span>name</span>
-            <span>details</span>
-            <span>date</span>
-            <span>place</span>
-            <span>start price</span>
-          </div>
-        </div>
-        <div>
-          <img src="" alt="" />
-          <div>
-            <span>name</span>
-            <span>details</span>
-            <span>date</span>
-            <span>place</span>
-            <span>start price</span>
+            <span>Candlesticks</span>
+            <span>A pair of seed candlesticks showing a low white baccarat design</span>
+            <span>October 17,2024</span>
+            <span>Tehran International ExhibitionTehran Province, Tehran, District 3, Iran</span>
+            <span>start price from:€1275.51</span>
           </div>
         </div>
       </div>
+      <section class="newstable" id="newstable">
+        <table>
+          <thead>
+            <tr>
+              <th>order</th>
+              <th>Name</th>
+              <th>Description</th>
+              <th>applicants</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>1</td>
+              <td>Copper Entry</td>
+              <td>Qajar copper entry, all old and original museum pen<a href="#">more</a></td>
+              <td>11</td>
+            </tr>
+            <tr>
+              <td>2</td>
+              <td>Vases</td>
+              <td>A pair of three-skin vases<a href="#">more</a></td>
+              <td>48</td>
+            </tr>
+            <tr>
+              <td>3</td>
+              <td>Glass Jars</td>
+              <td>Crystal glass sugarcane with antique body<a href="#">more</a></td>
+              <td>68</td>
+            </tr>
+            <tr>
+              <td>4</td>
+              <td>Wall Plate</td>
+              <td>Immortal antique wall plate<a href="#">more</a></td>
+              <td>53</td>
+            </tr>
+            <tr>
+              <td>5</td>
+              <td>Old Cup</td>
+              <td>Tang and the old cup are completely healthy and hand-made<a href="#">more</a></td>
+              <td>31</td>
+            </tr>
+            <tr>
+              <td>6</td>
+              <td>Samovar</td>
+              <td>Original and old Russian charcoal samovar<a href="#">more</a></td>
+              <td>16</td>
+            </tr>
+            <tr>
+              <td>7</td>
+              <td>Gramophone</td>
+              <td>Old Handley gramophone<a href="#">more</a></td>
+              <td>57</td>
+            </tr>
+            <tr>
+              <td>8</td>
+              <td>Spinning Wheel</td>
+              <td>Very rare old stainless steel wheel<a href="#">more</a></td>
+              <td>33</td>
+            </tr>
+            <tr>
+              <td>9</td>
+              <td>Crystal Vases</td>
+              <td>A pair of crystal vases with carved grape and wheat ears<a href="#">more</a></td>
+              <td>24</td>
+            </tr>
+            <tr>
+              <td>10</td>
+              <td>Candlesticks</td>
+              <td>A pair of seed candlesticks showing a low white baccarat design<a href="#">more</a></td>
+              <td>26</td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
     </main>
     <footer>
       <div class="foo">
