added Jewellery page

--- a/Jewellery.html
+++ b/Jewellery.html
@@ -34,120 +34,185 @@
           <h2>Iranian</h2>
           <h2>Jewellery</h2>
         </div>
-        <img src="./Lighting img/Lighting-img-main.jpg" alt="lighting" />
+        <img src="./Jewellery img/Jewellery-main.jpg" alt="lighting" />
       </div>
-      <div>
+      <div class="startsell">
         <div>
-          <img src="" alt="" />
+          <img src="./Jewellery img/Jewellery1.jpg" alt="Jewellery" />
           <div>
-            <span>name</span>
-            <span>details</span>
-            <span>date</span>
-            <span>place</span>
-            <span>start price</span>
+            <span>The diamond of the light sea</span>
+            <span>It is one of the jewels related to the era of Nader Shah. Naser al-Din Shah believed that this jewel was one of the crown jewels of Cyrus.</span>
+            <span>October 17,2024</span>
+            <span>Tehran International ExhibitionTehran Province, Tehran, District 3, Iran</span>
+            <span>start price from:€212890.74</span>
           </div>
         </div>
         <div>
-          <img src="" alt="" />
+          <img src="./Jewellery img/Jewellery2.jpg" alt="Jewellery" />
           <div>
-            <span>name</span>
-            <span>details</span>
-            <span>date</span>
-            <span>place</span>
-            <span>start price</span>
+            <span>Qajar earrings</span>
+            <span>The only earring left from the Qajar era</span>
+            <span>december 6, 2024</span>
+            <span>Tabriz International Exhibition Center:: East Azerbaijan Province, Tabriz, Tabriz Int. Exhib. Rd, 2CR7+FXM, Iran</span>
+            <span>start price from:€12890.74</span>
           </div>
         </div>
         <div>
-          <img src="" alt="" />
+          <img src="./Jewellery img/Jewellery3.jpg" alt="Jewellery" />
           <div>
-            <span>name</span>
-            <span>details</span>
-            <span>date</span>
-            <span>place</span>
-            <span>start price</span>
+            <span>Bracelet</span>
+            <span>Green emerald bracelet with diamond chain</span>
+            <span>October 17,2024</span>
+            <span>Tehran International ExhibitionTehran Province, Tehran, District 3, Iran</span>
+            <span>start price from:€2520.84</span>
           </div>
         </div>
         <div>
-          <img src="" alt="" />
+          <img src="./Jewellery img/Jewellery4.jpg" alt="Jewellery" />
           <div>
-            <span>name</span>
-            <span>details</span>
-            <span>date</span>
-            <span>place</span>
-            <span>start price</span>
+            <span>emerald</span>
+            <span>The emerald crown of Queen Soraya
+              which was one of the national and court jewels and belonged to the royal treasury</span>
+              <span>October 17,2024</span>
+              <span>Tehran International ExhibitionTehran Province, Tehran, District 3, Iran</span>
+              <span>start price from:€245520.84</span>
           </div>
         </div>
         <div>
-          <img src="" alt="" />
+          <img src="./Jewellery img/Jewellery5.jpg" alt="Jewellery" />
           <div>
-            <span>name</span>
-            <span>details</span>
-            <span>date</span>
-            <span>place</span>
-            <span>start price</span>
+            <span>​​ring</span>
+            <span>Qajar era ruby ​​ring</span>
+            <span>October 4,2024</span>
+            <span>Isfahan International Exhibition: Isfahan Province, Isfahan, Isfahan East Ring Expy, JQ4J+79C, Iran</span>
+            <span>start price from:€5661.22</span>
           </div>
         </div>
         <div>
-          <img src="" alt="" />
+          <img src="./Jewellery img/Jewellery6.jpg" alt="Jewellery" />
           <div>
-            <span>name</span>
-            <span>details</span>
-            <span>date</span>
-            <span>place</span>
-            <span>start price</span>
+            <span>Emerald necklace and diamond border</span>
+            <span>36 dimonds worked whit an emerald</span>
+            <span>October 17,2024</span>
+            <span>Tehran International ExhibitionTehran Province, Tehran, District 3, Iran</span>
+            <span>start price from:€5547.25</span>
           </div>
         </div>
         <div>
-          <img src="" alt="" />
+          <img src="./Jewellery img/Jewellery7.jpg" alt="Jewellery" />
           <div>
-            <span>name</span>
-            <span>details</span>
-            <span>date</span>
-            <span>place</span>
-            <span>start price</span>
+            <span>Royal Diamond Gem Ring</span>
+            <span>42 diamonds worked</span>
+            <span>October 17,2024</span>
+            <span>Tehran International ExhibitionTehran Province, Tehran, District 3, Iran</span>
+            <span>start price from:€887.21</span>
           </div>
         </div>
         <div>
-          <img src="" alt="" />
+          <img src="./Jewellery img/Jewellery8.jpg" alt="Jewellery" />
           <div>
-            <span>name</span>
-            <span>details</span>
-            <span>date</span>
-            <span>place</span>
-            <span>start price</span>
+            <span>yellow Diamond</span>
+            <span>The yellow diamond was auctioned on May 13, 1983 by the descendants of Ahmad Shah. This diamond was sold at an auction for 2.9 million dollars</span>
+            <span>december 6, 2024</span>
+            <span>Tabriz International Exhibition Center:: East Azerbaijan Province, Tabriz, Tabriz Int. Exhib. Rd, 2CR7+FXM, Iran</span>
+            <span>start price from:€54551.25</span>
           </div>
         </div>
         <div>
-          <img src="" alt="" />
+          <img src="./Jewellery img/Jewellery9.jpg" alt="Jewellery" />
           <div>
-            <span>name</span>
-            <span>details</span>
-            <span>date</span>
-            <span>place</span>
-            <span>start price</span>
+            <span>Swallow Chain</span>
+            <span>The first necklace made in Iran</span>
+            <span>december 6, 2024</span>
+            <span>Tabriz International Exhibition Center:: East Azerbaijan Province, Tabriz, Tabriz Int. Exhib. Rd, 2CR7+FXM, Iran</span>
+            <span>start price from:€5462.25</span>
           </div>
         </div>
         <div>
-          <img src="" alt="" />
+          <img src="./Jewellery img/Jewellery10.jpg" alt="Jewellery" />
           <div>
-            <span>name</span>
-            <span>details</span>
-            <span>date</span>
-            <span>place</span>
-            <span>start price</span>
-          </div>
-        </div>
-        <div>
-          <img src="" alt="" />
-          <div>
-            <span>name</span>
-            <span>details</span>
-            <span>date</span>
-            <span>place</span>
-            <span>start price</span>
+            <span>Neck</span>
+            <span>Qajar era neck pendant</span>
+            <span>October 29,2024</span>
+            <span>Shiraz International Exhibition: District 10, Shiraz, Fars Province, Iran</span>
+            <span>start price from:€1842.25</span>
           </div>
         </div>
       </div>
+      <section class="newstable" id="newstable">
+        <table>
+          <thead>
+            <tr>
+              <th>order</th>
+              <th>Name</th>
+              <th>Description</th>
+              <th>applicants</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>1</td>
+              <td>The diamond of the light sea</td>
+              <td>It is one of the jewels related to the era of Nader Shah. Naser al-Din Shah believed that this jewel was one of the crown jewels of Cyrus.<a href="#">more</a></td>
+              <td>11</td>
+            </tr>
+            <tr>
+              <td>2</td>
+              <td>Qajar Earrings</td>
+              <td>The only earring left from the Qajar era<a href="#">more</a></td>
+              <td>48</td>
+            </tr>
+            <tr>
+              <td>3</td>
+              <td>Glass Jars</td>
+              <td>Crystal glass sugarcane with antique body<a href="#">more</a></td>
+              <td>68</td>
+            </tr>
+            <tr>
+              <td>4</td>
+              <td>Wall Plate</td>
+              <td>Immortal antique wall plate<a href="#">more</a></td>
+              <td>53</td>
+            </tr>
+            <tr>
+              <td>5</td>
+              <td>Old Cup</td>
+              <td>Tang and the old cup are completely healthy and hand-made<a href="#">more</a></td>
+              <td>31</td>
+            </tr>
+            <tr>
+              <td>6</td>
+              <td>Samovar</td>
+              <td>Original and old Russian charcoal samovar<a href="#">more</a></td>
+              <td>16</td>
+            </tr>
+            <tr>
+              <td>7</td>
+              <td>Gramophone</td>
+              <td>Old Handley gramophone<a href="#">more</a></td>
+              <td>57</td>
+            </tr>
+            <tr>
+              <td>8</td>
+              <td>Spinning Wheel</td>
+              <td>Very rare old stainless steel wheel<a href="#">more</a></td>
+              <td>33</td>
+            </tr>
+            <tr>
+              <td>9</td>
+              <td>Crystal Vases</td>
+              <td>A pair of crystal vases with carved grape and wheat ears<a href="#">more</a></td>
+              <td>24</td>
+            </tr>
+            <tr>
+              <td>10</td>
+              <td>Candlesticks</td>
+              <td>A pair of seed candlesticks showing a low white baccarat design<a href="#">more</a></td>
+              <td>26</td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
     </main>
     <footer>
       <div class="foo">
