--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <span class="Jewellery">Jewellery</span>
         </a>
         <a href="./Decoration.html" target="_blank">
-          <img src="./img/home-page-carpet.jpg" alt="Persian Carpet" />
+          <img src="./Decoration img/Decoration-home-page.jpg" alt="Persian Carpet" />
           <span class="Decoration">Decoration</span>
         </a>
       </section>
@@ -153,7 +153,7 @@
         >
         <img src="./img/photography-home-page.jpg" alt="photography" />
       </section>
-      <section id="sold">
+      <!-- <section id="sold">
         <h2>sold out</h2>
         <div>
           <div class="sol">
@@ -175,7 +175,7 @@
             <span>last price</span>
           </div>
         </div>
-      </section>
+      </section> -->
     </main>
     <footer>
       <div class="foo">
